# HelloWorld

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Grafit/: CMakeLists.txt
Grafit/cmake/modules/: AddBoost.cmake
Grafit/extlibs/boost/: libboost_filesystem.so.1.58.0
Grafit/include/Grafit/Graphics/: Bitmap.hpp  BitmapData.hpp  BlendMode.hpp  Color.hpp  Color.inl  Drawable.hpp  Image.hpp  ImageData.hpp  OpenGL.hpp  PrimitiveType.hpp  RenderStates.hpp  RenderTarget.hpp  Shader.hpp  Shaders.hpp  Sprite.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Triangle.hpp  VBO.hpp  Vertex.hpp  Vertex.inl  VertexArray.hpp  View.hpp
Grafit/include/Grafit/Graphics/GL/: OpenGL.hpp  OpenGL.hpp.autosave  glad.h
Grafit/include/Grafit/Graphics/Geometry/: Mat3.hpp  Mat3.inl  Mat4.hpp  Mat4.inl  Math.hpp  Rect.hpp  Rect.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
Grafit/include/Grafit/Graphics/shaders/: shaders.hpp  sharer_printf.hpp
Grafit/include/Grafit/System/: Assert.hpp  Clock.hpp  Destructable.hpp  EmptyType.hpp  Event.hpp  Exception.hpp  Factory.hpp  File.hpp  FileStream.hpp  Function.hpp  InputStream.hpp  Lock.hpp  Lock.hpp.autosave  Mutex.hpp  Mutex.hpp.autosave  NonCopyable.hpp  NullType.hpp  Path.hpp  PlatformMacros.hpp  RefCounter.hpp  ResourceManager.hpp  ResourceManager.inl  Signal.hpp  Sleep.hpp  Sleep.hpp.autosave  Slot.hpp  SlotList.hpp  SmartPtr.hpp  SourceInfo.hpp  String.hpp  String.hpp.autosave  String.inl  SystemInfo.hpp  Thread.hpp  Thread.hpp.autosave  Thread.inl  ThreadLocal.hpp  ThreadLocal.hpp.autosave  ThreadLocalPtr.hpp  Time.hpp  (+6 more)
Grafit/include/Grafit/System/IO/: FileInputStream.hpp  FileStream.hpp  FileSystem.hpp  IFileSystem.hpp  IOStream.hpp  InputStream.hpp  OutputStream.hpp  PhysfsFileSystem.hpp  Stream.hpp  VirtualFileSystem.hpp
Grafit/include/Grafit/System/Memory/: smart_ptr.hpp
Grafit/include/Grafit/System/Meta/: Conditional.hpp
Grafit/include/Grafit/System/Promise/: Any.hpp  AsyncBase.hpp  AsyncBase.inl  Deferred.hpp  EventLoop.hpp  Optional.hpp  Promise.hpp  Stream.hpp
Grafit/include/Grafit/System/Signals/: Connection.hpp  Signal.hpp  Signal.inl  Slot.hpp  Slot.inl  SlotMap.hpp  SlotMap.inl
Grafit/include/Grafit/Window/: VideoMode.hpp  Window.hpp  Window.hpp.autosave
Grafit/src/Grafit/: CMakeLists.txt
Grafit/src/Grafit/Graphics/: Bitmap.cpp  BitmapData.cpp  BlendMode.cpp  CMakeLists.txt  Color.cpp  Image.cpp  ImageData.cpp  OpenGL.cpp  RenderStates.cpp  RenderTarget.cpp  Shader.cpp  Shaders.cpp  Sprite.cpp  Texture.cpp  Transform.cpp  Transformable.cpp  Triangle.cpp  VBO.cpp  VertexArray.cpp  View.cpp
Grafit/src/Grafit/Graphics/GL/: OpenGL.cpp  glad.c
Grafit/src/Grafit/Graphics/Geometry/: Math.cpp
Grafit/src/Grafit/Graphics/shaders/: shaderpc.frag  shaderpc.vert  shaders.cpp
Grafit/src/Grafit/Graphics/shaders/dither/: 2x2.glsl  2x2.glsl.c  4x4.glsl.c  8x8.glsl.c
Grafit/src/Grafit/Graphics/shaders/hsv2rgb/: hsv2rgb.glsl.c
Grafit/src/Grafit/Graphics/shaders/luma/: luma.glsl.c
Grafit/src/Grafit/Graphics/shaders/v330/: positioncolor.frag.c  positioncolor.vert.c  positiontexture.frag  positiontexture.frag.c  positiontexture.vert  positiontexture.vert.c
Grafit/src/Grafit/Graphics/shaders/water/: water2d.glsl.c
Grafit/src/Grafit/System/: Assert.cpp  CMakeLists.txt  Clock.cpp  Exception.cpp  File.cpp  FileStream.cpp  Lock.cpp  Mutex.cpp  Path.cpp  RefCounter.cpp  Signal.cpp  Sleep.cpp  String.cpp  SystemInfo.cpp  Thread.cpp  ThreadLocal.cpp  Time.cpp  Uuid.cpp
Grafit/src/Grafit/System/Android/: Activity.cpp  ResourceStream.cpp
Grafit/src/Grafit/System/IO/: FileStream.cpp  FileSystem.cpp  PhysfsFileSystem.cpp  Stream.cpp  VirtualFileSystem.cpp
Grafit/src/Grafit/System/OSX/: SystemInfoImpl.hpp  SystemInfoImpl.mm
Grafit/src/Grafit/System/Promise/: EventLoop.cpp
Grafit/src/Grafit/System/Signals/: Connection.cpp
Grafit/src/Grafit/System/Unix/: ClockImpl.cpp  ClockImpl.hpp  FileImpl.cpp  FileImpl.hpp  MutexImpl.cpp  MutexImpl.hpp  SleepImpl.cpp  SleepImpl.hpp  SystemInfoImpl.cpp  SystemInfoImpl.hpp  ThreadImpl.cpp  ThreadImpl.hpp  ThreadLocalImpl.cpp  ThreadLocalImpl.hpp
Grafit/src/Grafit/System/Win32/: ClockImpl.cpp  ClockImpl.hpp  FileImpl.cpp  MutexImpl.cpp  MutexImpl.hpp  SleepImpl.cpp  SleepImpl.hpp  SystemInfoImpl.cpp  SystemInfoImpl.hpp  ThreadImpl.cpp  ThreadImpl.hpp  ThreadLocalImpl.cpp  ThreadLocalImpl.hpp
Grafit/src/Grafit/Window/: CMakeLists.txt  VideoMode.cpp  Window.cpp
Grafit/tools/win32/: positioncolor.vert.c
helloworld/: CMakeLists.txt  CMakeLists.txt.autosave  Picture.cpp  Picture.hpp  main.cpp  main.cpp.autosave
icebird/: CMakeLists.txt
icebird/cmake/modules/: FindOPENFRAMEWORKS.cmake  FindSOIL.cmake
icebird/include/icebird/Graphics/: Color.hpp  Color.inl  Image.hpp  ImageData.hpp  Shader.hpp  Shaders.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Triangle.hpp  VBO.hpp  Vertex.hpp  Vertex.inl
icebird/include/icebird/Graphics/GL/: OpenGL.hpp  gl_3_2.hpp  glad.h  wgl.h
icebird/include/icebird/Graphics/GLES2/: glad.h
icebird/include/icebird/Graphics/Geometry/: Mat3.hpp  Mat3.inl  Mat4.hpp  Mat4.inl  Vector2.hpp  Vector2.inl  Vector3.inl
icebird/include/icebird/Graphics/shaders/: shaders.hpp
icebird/include/icebird/System/: Types.hpp
icebird/include/icebird/System/Math/: Mat4.hpp  Mat4.inl  Vector2.hpp  Vector2.inl
icebird/include/icebird/Window/: VideoMode.hpp  Window.hpp
icebird/src/icebird/: CMakeLists.txt
icebird/src/icebird/Graphics/: CMakeLists.txt  Color.cpp  Image.cpp  ImageData.cpp  Shader.cpp  Shaders.cpp  Texture.cpp  Transform.cpp  Transformable.cpp  Triangle.cpp  VBO.cpp
icebird/src/icebird/Graphics/GL/: OpenGL.cpp  gl_2_1.c  gl_3_2.c  gl_3_2.cpp  gl_3_3.c  gl_4_1.c  gl_4_3.c  glad.c  glx.c  wgl.c
icebird/src/icebird/Graphics/GLES2/: glad.c
icebird/src/icebird/Graphics/shaders/: shaders.cpp
icebird/src/icebird/Graphics/shaders/dither/: 2x2.glsl.c  4x4.glsl  (+3 more)
icebird/src/icebird/System/: CMakeLists.txt
icebird/src/icebird/System/Math/: Mat4.cpp  Vector2.cpp
icebird/src/icebird/Window/: CMakeLists.txt  VideoMode.cpp  Window.cpp
(+22 files in other folders)
